# UnB

./: .gitignore  README.md
2024.1/APC/beecrowd/: README.md  indexer.c
2024.1/APC/exercicios/: README.md  ex000.c  ex001.c  ex003.c  ex006.c  ex015.c  ex018.c  ex021.c  ex022.c  ex025.c  ex043.c  ex044.c  ex046.c  ex059.c  ex062.c  ex065.c  ex067.c  ex070.c  ex075.c  ex081.c  ex084.c  ex086.c  ex090.c  ex091.c  ex092.c  ex096.c  ex098.c  ex100.c  ex101.c  ex102.c  ex104.c  ex105.c  ex110.c  ex111.c  ex112.c  ex114.c  ex116.c  indexer.c
2024.1/APC/projeto/: intermediario.txt  main.c
2024.1/APC/provas/: README.md  indexer.c
2024.1/ISC/exercicios/: README.md  ex000.asm  ex001.asm  ex002.asm  ex003.asm  ex004.asm  ex005.asm  ex006.asm  ex007.asm  ex008.asm  ex010.asm  ex011.asm  ex012.asm  ex013.asm  ex014.asm  ex015.asm  ex016.asm  ex017.asm  ex018.asm  ex019.asm  ex020.asm
2024.2/ED/exercicios/: ex001.c  ex005.c  ex006.c  ex007.c  ex008.c  ex009.cpp  ex010.c  ex011.c  ex012.c  ex013.c  ex014.c  ex015.c  ex016.c  ex017.c  ex018.c  ex019.c  ex020.c  ex021.c  ex022.c  ex023.c  ex024.c  ex045.c  ex046.c  ex047.c  ex048.c  ex049.c  ex050.c
2024.2/ED/prova1/: ex1.c  ex2.c  ex3.c
2024.2/ED/prova2/: ex1.c  ex2.c  ex3.c
2024.2/ED/prova3/: ex1.c
2025.1/TP1/labs/lab09/: CMakeLists.txt
2025.1/TP1/labs/lab09/src/: main.cpp
2025.1/TP1/labs/lab09/src/containers/: containers.cpp  containers.hpp
2025.1/TP1/labs/lab09/src/dominios/: dominios.cpp  dominios.hpp
2025.1/TP1/labs/lab09/src/entidades/: entidades.hpp
2025.1/TP1/questionarios/: ex001.cpp  ex002.cpp  (+11 more)
(+251 files in other folders)
